# rscdk-book

./: .gitignore  404.html  README.md  abi-to-rust.html  book.toml  database.html  dbi64.html  env.html  helloworld-build.html  helloworld-deploying.html  helloworld-full-example.html  helloworld-source-code.html  helloworld-testing.html  helloworld.html  index.html  inline_action.html  multi_index_usage.html  primary_index.html  print.html  references.html  rust-analyzer.html  searchindex.js  searchindex.json  secondary_indexes.html  singleton.html  todo.html
demos/helloworld/: Cargo.toml  build.sh  buyram.py  cpu.py  deploy.py  powerup.py  test.py  test.sh  transfer.py
demos/helloworld2/: Cargo.toml  build.sh  test.py
demos/helloworld2/abigen/: Cargo.toml  main.rs
demos/mi_example/: Cargo.toml  lib.rs  test.py
references/: action.html  common_apis.html  constants.html  dbi64.html  iterator.html  macros.html  multi_index.html  name.html
src/: SUMMARY.md  abi-to-rust.md  database.md  dbi64.md  env.md  helloworld-abi.md  helloworld-build.md  helloworld-deploying.md  helloworld-full-example.md  helloworld-source-code.md  helloworld-testing.md  helloworld.md  inline_action.md  multi_index_usage.md  multiindex.md  primary_index.md  references.md  rust-analyzer.md  secondary_indexes.md  singleton.md  todo.md
src/references/: action.md  common_apis.md  constants.md  dbi64.md  iterator.md  macros.md  multi_index.md  name.md
