[package]
name = "helloworld"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
eosio-chain = { version = "0.1.0", git = "https://github.com/uuosio/rscdk", default-features = false }

[lib]
name = "helloworld"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "eosio-chain/std",
]
